[package]
name = "rust-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1"
dotenvy = "0.15"

sqlx = { version = "0.9.0", features = [ "runtime-tokio", "postgres", "macros", "tls-native-tls" ] }

tower-http = { version = "0.7.0", features = ["cors", "fs", "compression-gzip"] }
