[package]
name = "rust-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1"
dotenvy = "0.15"

sqlx = { version = "0.9.0", features = [ "runtime-tokio", "postgres", "macros", "tls-native-tls" ] }

tower-http = { version = "0.7.0", features = ["cors", "fs", "compression-gzip"] }

bip39 = "2.1.0"
bip32 = "0.5.3"
sha3 = "0.12.0"
hex = "0.4.3"

ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hmac = "0.12.1"
sha2 = "0.10.8"       # Used for SHA512 in SLIP-0010
bs58 = "0.5.1"       # Solana standard address representation

ripemd = "0.1.3"
bech32 = "0.9.1"
uuid = { version = "1.23.5", features = ["v4"] }
rust_decimal = "1.42.1"