[package]
name = "rust-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1"
dotenvy = "0.15"

sqlx = { version = "0.9.0", features = [ "runtime-tokio", "postgres", "macros", "tls-native-tls", "chrono", "rust_decimal", "uuid" ] }

tower-http = { version = "0.7.0", features = ["cors", "fs", "compression-gzip"] }

bip39 = { version = "2.1.0", features = ["rand"] }
bip32 = "0.5.3"
sha3 = "0.12.0"
hex = "0.4.3"

ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
hmac = "0.13.0"
sha2 = "0.11.0"       # Used for SHA512 in SLIP-0010
bs58 = "0.5.1"       # Solana standard address representation

ripemd = "0.2.0"
bech32 = { version = "0.12.0", features = [] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
rust_decimal = "1.42.1"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.33"

aes-gcm = "0.11.0"
argon2 = "0.5.3"
rand = "0.10.2"